# mtcnn_ncnn_android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/syj/faceremover/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  det1.id.h  det1.mem.h  det2.id.h  det2.mem.h  det3.id.h  mtcnn.cpp  mtcnn.h  native-lib.cpp
app/src/main/java/com/syj/faceremover/: FaceRemover.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/syj/faceremover/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
